# fimjax

./: .gitignore  README.MD  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml
data/: heart.npz
docs/: index.md
docs/api/: core.md  iterations.md  main.md
docs/api/util/: datastructures.md  mesh_generation.md
docs/usage/: derivatives.md  solve.md
snippets/: derivatives.md.ipynb  discontinuity.py  finite_differences.py  minimal_working_example.py  performance_testing.py  solve.md.ipynb
src/fimjax/: core.py  iterations.py  main.py
src/fimjax/util/: datastructures.py  mesh_generation.py  strenums.py
test/: test_integration.py
